# readability

./: .gitignore  LICENSE  README.md  pyproject.toml  readability.py  test_readability.py
.github/workflows/: ci.yml  publish.yml  update-guides.yml
configs/: pyrefly.toml  ruff.toml
guides/: cppguide.md  htmlcssguide.md  javaguide.md  jsguide.md  jsoncstyleguide.md  tsguide.md  vimscriptguide.md
