[project]
name = "readability-cli"
version = "0.5.0"
description = "A CLI to lint, format, and type-check code with Google-style defaults, and pull Google style guides in markdown format."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "click>=8.3.1",
    "markdownify>=1.2.2",
    "requests>=2.33.0",
]

[project.urls]
Homepage = "https://github.com/owahltinez/readability"
Repository = "https://github.com/owahltinez/readability"

[project.scripts]
readability = "readability:main"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
include = [
    "/readability.py",
    "/guides",
    "/configs",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "D", "PL"]
ignore = ["PLR0911", "PLR0912", "PLR0913", "PLR0915", "PLR2004"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["D"]
"*_test.py" = ["D"]
